--- a/style.css
+++ b/style.css
@@ -138,16 +138,37 @@ i {
 }
 
 .btn-new { top: 45px;}
+.btn-score { top: 85px;}
+.btn-dice{ top: 125px;}
 .btn-roll { top: 403px;}
 .btn-hold { top: 467px;}
 
 .dice {
     position: absolute;
     left: 50%;
-    top: 178px;
+    top: 200px;
     transform: translateX(-50%);
     height: 100px;
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
+}
+
+.dice-left{
+    position: absolute;
+    left: 40%;
+    top: 200px;
+    transform: translateX(-50%);
+    height: 100px;
+    box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
+    display: none;
+}
+.dice-right{
+    position: absolute;
+    right: 30%;
+    top: 200px;
+    transform: translateX(-50%);
+    height: 100px;
+    box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
+    display: none;
 }
 
 .winner { background-color: #f7f7f7; }
